--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1>
-  {{title}}
+  <a [routerLink]="['/draft']">Upload a Draft</a>
+  <a [routerLink]="['/draft', '5914dc124c6a664a27eba2e0']">Example Draft</a>
+
+  <router-outlet></router-outlet>
 </h1>
