--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>
   <a [routerLink]="['/draft']">Upload a Draft</a>
-  <a [routerLink]="['/draft', '5914dc124c6a664a27eba2e0']">Example Draft</a>
+  <a [routerLink]="['/draft', '59169942c5eba0725e3178f8']">Example Draft</a>
+  <a [routerLink]="['/crack']">Crack a Draft</a>
 
   <router-outlet></router-outlet>
 </h1>
