--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <a [routerLink]="['/draft']">Upload a Draft</a>
   <a [routerLink]="['/draft', '59169942c5eba0725e3178f8']">Example Draft</a>
   <a [routerLink]="['/crack']">Crack a Draft</a>
-
+  <a [routerLink]="['/search']">Search</a>
   <router-outlet></router-outlet>
 </h1>
