--- a/src/app/draft/draft-viewer/draft-viewer.component.html
+++ b/src/app/draft/draft-viewer/draft-viewer.component.html
@@ -6,17 +6,31 @@
   <div class="draft" *ngIf='draftData'>
     <p>{{draftData.draft.drafter}}'s {{draftData.format.name}} Draft</p>
     <p><a [routerLink]="['/crack', draftData.draft._id]" target="_blank">Crack this draft link</a></p>
-
-    <div class="pack" *ngFor='let pack of draftData.draft.packs; let packIndex = index'>
-      <p>{{calculatePackPickString(packIndex)}}</p>
-      <app-card *ngFor='let card of pack; let pickIndex = index'
-        [cardName]='card'
-        [index]='pickIndex'
-        [picked]='draftData.draft.picks[packIndex]===pickIndex'
-      >
-      </app-card>
+    <div class="buttons">
+      <button 
+        [disabled]='state === 0'
+        (click)='onChangeView(0)'>View Picks</button>
+      <button 
+        [disabled]='state === 1'
+        (click)='onChangeView(1)'>View Card Pool</button>
     </div>
-
+    <div class="picks" *ngIf='state === 0'>
+      <div class="pack" *ngFor='let pack of draftData.draft.packs; let packIndex = index'>
+        <p>{{calculatePackPickString(packIndex)}}</p>
+        <app-card *ngFor='let card of pack; let pickIndex = index'
+          [cardName]='card'
+          [index]='pickIndex'
+          [picked]='draftData.draft.picks[packIndex]===pickIndex'
+        >
+        </app-card>
+      </div>
+    </div>
+    
+    <div class="pool" *ngIf='state === 1 && draftData'>
+      <app-draft-pool
+        [draftData]='draftData'>
+      </app-draft-pool>
+    </div>
     
     
   </div>
