card pool management with sideboard

--- a/src/app/crack/crackdraft/crackdraft.component.html
+++ b/src/app/crack/crackdraft/crackdraft.component.html
@@ -10,6 +10,7 @@
         [cardName]='card'
         [index]='pickIndex'
         (cardClicked)='onCardClicked(pickIndex, card)'
+        [clickable]='true'
       >
       </app-card>
     </div>
