--- a/src/app/crack/format-chooser/format-chooser.component.html
+++ b/src/app/crack/format-chooser/format-chooser.component.html
@@ -1,14 +1,19 @@
-<div class="format-chooser" *ngIf='formatList'>
-  <label for="draft-selector">Draft Format:</label>
-  <select name="draft-format" 
-          id="draft-selector"
-          (change)='onChange($event.target.value)'>
-    <option *ngFor='let format of formatList'
-            [value]='format.mtgoName+","+format.drafts'>
-      {{format.name}} ({{format.drafts}} drafts)
-    </option>
-  </select>
-  <button (click)='onSubmit()'>Crack a draft!</button>
-
-  {{errorMessage}}
+<div class="format-chooser">
+  <button class='btn btn-default' *ngIf='!formatList'
+          disabled='true'>
+    Loading...
+  </button>
+  <div class="btn-group" *ngIf='formatList'>
+    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Select Draft Format <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu">
+      <li *ngFor='let format of formatList'>
+        <a (click)='onSubmit(format.mtgoName+","+format.drafts)'>{{format.name}} ({{format.drafts}} drafts)</a>
+      </li>
+    </ul>
+  </div>
+  <alert type="danger" *ngIf='errorMessage'>
+    {{errorMessage}}
+  </alert>
 </div>
