--- a/src/app/draft-search/result-table/result-table.component.html
+++ b/src/app/draft-search/result-table/result-table.component.html
@@ -3,8 +3,8 @@
     Loading~
   </div>
 
-  <div class="result-table" *ngIf='draftData'>
-    <table>
+  <div class="result-table table-responsive" *ngIf='draftData'>
+    <table class='table table-striped table-hover'>
       <tr>
         <th>Posted by</th>
         <th>Format</th>
@@ -18,10 +18,10 @@
         <td>{{draftRow.format.name}}</td>
         <td *ngIf='draftRow.draft.cracks.length === 0'>{{draftRow.draft.cracks.length}}</td>
         <td *ngIf='draftRow.draft.cracks.length > 0'>
-          <a [routerLink]="['/stats', draftRow.draft._id]" target="_blank">{{draftRow.draft.cracks.length}}</a>
+          {{draftRow.draft.cracks.length}} <a [routerLink]="['/stats', draftRow.draft._id]"><i class="fa fa-pie-chart" aria-hidden="true"></i></a>
         </td>
-        <td><a [routerLink]="['/crack', draftRow.draft._id]" target="_blank">Crack</a></td>
-        <td><a [routerLink]="['/draft', draftRow.draft._id]" target="_blank">View</a></td>
+        <td><a [routerLink]="['/crack', draftRow.draft._id]"><i class="fa fa-cubes" aria-hidden="true"></i></a></td>
+        <td><a [routerLink]="['/draft', draftRow.draft._id]"><i class="fa fa-list-alt" aria-hidden="true"></i></a></td>
       </tr>
     </table>
     <div class="pagination" *ngIf='isPaginated && totalDraftCount && totalDraftCount > pageSize'>
