--- a/src/app/draft/draft-upload/draft-upload.component.html
+++ b/src/app/draft/draft-upload/draft-upload.component.html
@@ -1,16 +1,20 @@
 <div class="file-upload">
-  <div class="upload-form" *ngIf='!draftIds'>
+  <alert type="danger" *ngIf='errorMessage'>
+    {{errorMessage}}
+    This probably means your draft log was modified, corrupted or you disconnected mid-draft.
+  </alert>
+  <div class="upload-form" *ngIf='!draftIds && !errorMessage'>
     <input name='draftUploadField' id='draftUploadField'
       type="file"
       placeholder="Upload file" 
       accept=".txt">
-      <label>
+      <label tooltip='We use your MTGO username so you can easily find your own drafts later. But you can change this and be anonymous if preferred'>
       <input type="checkbox" 
         [checked]="isAnonymous" 
         (change)="isAnonymous = $event.target.checked">
-        Anonymous Upload
-      </label>
-    <button (click)="submit($event)">Upload</button>
+        Don't publish my MTGO username
+      </label>      
+    <button class='btn btn-primary pull-right' (click)="submit($event)">Upload</button>
   </div>
   <div class="files-uploaded" *ngIf='draftIds'>
     Drafts uploaded:
@@ -20,4 +24,6 @@
       </li>
     </ul>
   </div>
+  <button class='btn btn-primary' *ngIf='draftIds || errorMessage'
+  (click)='cleanup()'>Upload another draft</button>
 </div>
