--- a/src/app/draft/draft-viewer/draft-viewer.component.html
+++ b/src/app/draft/draft-viewer/draft-viewer.component.html
@@ -1,37 +1,41 @@
-<div class="draft-viewer">
+<div class="container">
   <div class="loading" *ngIf='!draftData'>
-    <span *ngIf='!errorMessage'>Loading draft~</span>
-    <span *ngIf='errorMessage'>Draft not found</span>    
+    <p *ngIf='!errorMessage'>Loading draft~</p>
+    <alert type="danger" *ngIf='errorMessage'>
+      Draft not found
+    </alert>
   </div>
   <div class="draft" *ngIf='draftData'>
-    <p>{{draftData.draft.drafter}}'s {{draftData.format.name}} Draft</p>
-    <p><a [routerLink]="['/crack', draftData.draft._id]" target="_blank">Crack this draft link</a></p>
-    <div class="buttons">
-      <button 
-        [disabled]='state === 0'
-        (click)='onChangeView(0)'>View Picks</button>
-      <button 
-        [disabled]='state === 1'
-        (click)='onChangeView(1)'>View Card Pool</button>
+    <h2>{{draftData.draft.drafter}}'s {{draftData.format.name}} Draft</h2>
+    <p><a [routerLink]="['/crack', draftData.draft._id]">
+      <i class="fa fa-cubes" aria-hidden="true"></i> Crack this draft</a>
+      <span *ngIf='draftData.draft.cracks.length > 0'>| 
+        <a [routerLink]="['/stats', draftData.draft._id]">
+      <i class="fa fa-pie-chart" aria-hidden="true"></i> Draft Stats</a>
+      </span>
+    </p>
+  </div>
+</div>
+<div class="container-fluid">
+<tabset #staticTabs *ngIf='draftData'>
+  <tab heading='Draft Picks'>
+    <div class="pack" *ngFor='let pack of draftData.draft.packs; let packIndex = index'>
+      <h3>{{calculatePackPickString(packIndex)}}</h3>
+      <app-card *ngFor='let card of pack; let pickIndex = index'
+        [cardName]='card'
+        [index]='pickIndex'
+        [picked]='draftData.draft.picks[packIndex]===pickIndex'
+      >
+      <hr *ngIf='packIndex < 3'>
+      </app-card>
     </div>
-    <div class="picks" *ngIf='state === 0'>
-      <div class="pack" *ngFor='let pack of draftData.draft.packs; let packIndex = index'>
-        <p>{{calculatePackPickString(packIndex)}}</p>
-        <app-card *ngFor='let card of pack; let pickIndex = index'
-          [cardName]='card'
-          [index]='pickIndex'
-          [picked]='draftData.draft.picks[packIndex]===pickIndex'
-        >
-        </app-card>
-      </div>
-    </div>
-    
-    <div class="pool" *ngIf='state === 1 && draftData'>
+  </tab>
+  <tab heading='Card Pool'>
+    <div class="pool">
       <app-draft-pool
         [draftData]='draftData'>
       </app-draft-pool>
     </div>
-    
-    
-  </div>
+  </tab>
+</tabset>
 </div>
