--- a/src/app/draft-search/draft-search/draft-search.component.html
+++ b/src/app/draft-search/draft-search/draft-search.component.html
@@ -1,9 +1,45 @@
-<p>
-  Search for MTGO Username:
-  <input #textbox type='text' name='name' (keyup.enter)='onButtonClick(textbox.value)'>
-  <button (click)='onButtonClick(textbox.value)'>Search</button>
-  <app-result-table
-    [username]='nameSearch'
-    [isPaginated]='isPaginated'>
-  </app-result-table>
-</p>
+<form>
+  <div class='form-group'>
+    <label for='textbox'>Search for MTGO Username:</label>
+    <input #textbox type='text' class='form-control' name='name' (keyup.enter)='onButtonClick(textbox.value)'>
+  </div>  
+  <button class='btn btn-primary' (click)='onButtonClick(textbox.value)'>Search</button>
+  <button class='btn btn-default' (click)='onButtonClick("")'>Reset</button>
+  </form>
+  <br>
+  <div>
+  <div class="loading" *ngIf='!draftData'>
+    Loading~
+  </div>
+
+  <div class="result-table table-responsive" *ngIf='draftData'>
+    <table class='table table-striped table-hover'>
+      <tr>
+        <th>Posted by</th>
+        <th>Format</th>
+        <th># Cracked</th>
+        <th>Crack</th>
+        <th>View</th>
+      </tr>
+
+      <tr *ngFor='let draftRow of draftData'>
+        <td><a (click)='onClickName(draftRow.draft.drafter)'>{{draftRow.draft.drafter}}</a></td>
+        <td>{{draftRow.format.name}}</td>
+        <td *ngIf='draftRow.draft.cracks.length === 0'>{{draftRow.draft.cracks.length}}</td>
+        <td *ngIf='draftRow.draft.cracks.length > 0'>
+          {{draftRow.draft.cracks.length}} <a [routerLink]="['/stats', draftRow.draft._id]"><i class="fa fa-pie-chart" aria-hidden="true"></i></a>
+        </td>
+        <td><a [routerLink]="['/crack', draftRow.draft._id]"><i class="fa fa-cubes" aria-hidden="true"></i></a></td>
+        <td><a [routerLink]="['/draft', draftRow.draft._id]"><i class="fa fa-list-alt" aria-hidden="true"></i></a></td>
+      </tr>
+    </table>
+    <div *ngIf='isPaginated && totalDraftCount && totalDraftCount > pageSize'>
+
+      <pagination [totalItems]="totalDraftCount" [(ngModel)]="pageNumber" [maxSize]="10" 
+                  [itemsPerPage]="pageSize" class="pagination-sm"
+                  (pageChanged)="pageChanged($event)"></pagination>
+    </div>
+  </div>
+  
+</div>
+
