--- a/src/app/crack/crackdraft/crackdraft.component.html
+++ b/src/app/crack/crackdraft/crackdraft.component.html
@@ -1,11 +1,16 @@
 <div class="crack-draft">
-  <p *ngIf='currentState === 0'>
-    Loading~
-  </p>
-  <div class="draft-area" *ngIf='currentState === 1'>
-    <div class="pack">
-      <p>{{draftData.format.name}} Crack a Draft</p>
-      <p>Pick {{currentPick}}/8:</p>
+
+
+<p *ngIf='currentState === 0'>
+  Loading~
+</p>
+<div class="draft-area" *ngIf='currentState === 1'>
+  <div class="pack">
+    <div class="container">
+      <h3>{{draftData.format.name}} Crack a Draft</h3>
+      <h4>Pick {{currentPick}}/8:</h4>
+    </div>
+    <div class="container-fluid">
       <app-card *ngFor='let card of draftData.draft.packs[currentPick-1]; let pickIndex = index'
         [cardName]='card'
         [index]='pickIndex'
@@ -13,25 +18,34 @@
         [clickable]='true'
       >
       </app-card>
-    </div>
-    <div class="picked-cards" *ngIf='myPickedCards.length >= 1'>
-      <p>Picked Cards:</p>
+    </div>      
+  </div>
+  <div class="picked-cards" *ngIf='myPickedCards.length >= 1'>
+    <hr>
+    <div class="container-fluid">
+      <h3>Picked Cards:</h3>
       <app-card *ngFor='let card of myPickedCards'
         [cardName]='card.name'>
       </app-card>
     </div>
   </div>
-  <div class="archetype-select" *ngIf='currentState === 2'>
-    <p>Your 8 picks:</p>
-    <app-card *ngFor='let card of myPickedCards'
-        [cardName]='card.name'>
-    </app-card>
-    <p>Which colors do you think you're going to play?<p>
-    <span *ngFor='let colorName of colorNames; let i = index'>   
-      <input type="checkbox" 
-        [checked]="colorCheckboxes[i]" 
-        (change)="colorCheckboxes[i] = $event.target.checked"> {{colorName}}
-    </span>
-    <button (click)='onSubmitCrackDraft()'>Submit Crack a Draft</button>
+</div>
+<div class="container" *ngIf='currentState === 2'>
+  <h3>Your 8 picks:</h3>
+  <app-card *ngFor='let card of myPickedCards'
+      [cardName]='card.name'>
+  </app-card>
+  <h3>Which colors do you think you're going to play?</h3>
+  <div class="btn-group">
+    <label class="btn btn-default" 
+           [ngClass]='colorName'
+           [(ngModel)]='colorCheckboxes[i]' 
+           btnCheckbox *ngFor='let colorName of colorNames; let i = index'>{{colorName}}</label>
   </div>
+  <button 
+    class='btn btn-primary'
+    (click)='onSubmitCrackDraft()'
+    [disabled]='!colorCheckboxes[0] && !colorCheckboxes[1] && !colorCheckboxes[2] && !colorCheckboxes[3] && !colorCheckboxes[4]'>
+    Submit Crack a Draft</button>
+</div>
 </div>
