--- a/src/app/shared/card/card.component.css
+++ b/src/app/shared/card/card.component.css
@@ -26,10 +26,15 @@
   background-color: red;
 }
 
-h2 { 
-   position: absolute; 
-   top: -100px; 
-   left: 20px; 
-   width: 100%;
-   color: red;
+h1 {
+  text-align: center; 
+  position: absolute; 
+  top: -70px; 
+  left: 0px; 
+  width: 100%;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 1), 
+              -1px -1px 3px rgba(0, 0, 0, 1),
+              1px -1px 3px rgba(0, 0, 0, 1),
+              -1px 1px 3px rgba(0, 0, 0, 1);
 }
