--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
   <div class="container">
     <a class='navbar-brand' [routerLink]="['']"><i class="fa fa-cubes" aria-hidden="true"></i> Crack a Draft</a>
     <ul class="nav navbar-nav navbar-right">        
-      <li><a [routerLink]="['/draft']">Upload a Draft</a></li>
-      <li><a [routerLink]="['/crack']">Crack a Draft</a></li>
-      <li><a [routerLink]="['/search']">List/Search</a></li>
+      <li><a [routerLink]="['']">Home</a></li>
+      <li><a [routerLink]="['/about']">About</a></li>
+      <li><a [routerLink]="['/donate']">Donate</a></li>
     </ul>
   </div>
 </nav>
