about, donate pages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
         <div class="panel-heading">
           <i class="fa fa-upload" aria-hidden="true"></i> Upload a Draft
         </div>
-        <div class="panel-body top-panel-body">
+        <div class="panel-body top-panel-body has-scroll">
           <app-draft-upload></app-draft-upload>
           <a (click)='lgModal.show()'>What do I need to upload?</a>
 
