footer and smaller cards on tablet size

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,12 @@
   </div>
 </nav>
 <router-outlet></router-outlet>
-<footer>
-  
-  This website is not produced, endorsed, supported, or affiliated with Wizards of the Coast.
+<footer id='footer'>
+  <p>Created by: Fabio Kubagawa <a href="https://twitter.com/kyong92"><i class="fa fa-twitter" aria-hidden="true"></i></a></p>
+  <p>Wizards of the Coast, Magic: The Gathering, and their logos are trademarks of Wizards of the Coast LLC in the 
+    United States and other countries.©2009 Wizards. All Rights Reserved</p>
+  <p><em>Crack a Draft</em> is not affiliated with, endorsed, sponsored, or specifically approved by Wizards of the Coast LLC. 
+    <em>Crack a Draft</em> may use the trademarks and other intellectual property of Wizards of the Coast LLC, which is 
+    permitted under <a href="http://magic.wizards.com/en/articles/media/fan-kits">Wizards' Fan Site Policy</a>. For more information about Wizards of the Coast or any of Wizards' trademarks or other 
+    intellectual property, please visit their website at <a href="www.wizards.com">www.wizards.com</a>)</p>
 </footer>
