--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,8 @@
-footer {
-  background-color: black;
-  color: white;
+#footer {
+  background-color: #333333;
+  color: #CCCCCC;
   text-align: center;
-  margin-top: 20px;
-  height: 100px;
+  margin-top: 50px;
+  height: 150px;
+  padding: 30px;
 }
