--- a/src/app/draft/draft-upload/draft-upload.component.html
+++ b/src/app/draft/draft-upload/draft-upload.component.html
@@ -4,6 +4,7 @@
     This probably means your draft log was modified, corrupted or you disconnected mid-draft.
   </alert>
   <div class="upload-form" *ngIf='!draftIds && !errorMessage'>
+    <p>Select a MTGO draft log file to upload. Then share your draft and crack a draft links with others.</p>
     <input name='draftUploadField' id='draftUploadField'
       type="file"
       placeholder="Upload file" 
