--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
           <i class="fa fa-cubes" aria-hidden="true"></i> Crack a Draft
         </div>
         <div class="panel-body top-panel-body">
-          <p>The draft is choosed randomly from the format you pick below. Or simply go for All Random if you can't choose!</p>
+          <p>Do a random Crack a Draft by selecting your favorite format below or go All Random if you can't decide!</p>
           <app-format-chooser></app-format-chooser>
         </div>
       </div>
@@ -58,6 +58,9 @@
     </div>    
     <div class="col-md-12">
       <div class="panel panel-default">
+        <div class="panel-heading">
+          <i class="fa fa-search" aria-hidden="true"></i> Recently Uploaded Drafts
+        </div>
         <div class="panel-body">
           <app-draft-search></app-draft-search>
         </div>
